--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ install:
   - pip install -r requirements.txt
 script:
 
-# style enforcement - if we want to ignore stuff use '--ignore E456 E123'
-  - flake8 src --exclude src/test  --exclude src/main.py
+# style enforcement - (exclude views because pyqt output is verbose/unwieldy/not our code)
+  - flake8 src --exclude src/test  --exclude src/main.py --exclude src/view/*
 
 ## static type checking
   - mypy -p src --ignore-missing-imports
