--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ mypy==0.550
 parameterized>=0.6.1
 pycodestyle<2.4.0,>=2.0.0
 PyQt5==5.10.1
-pytest
-pytest-cov
+pytest >=3.7
+pytest-cov >=2.5.1
 PyYAML>=1.3
